examples/test/testpolicy5223.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5223
  namespace: namespace144
spec:
  podSelector:
    matchLabels:
      key28: value5
      key36: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value2
          key37: value41
      podSelector:
        matchLabels:
          key20: value0
